--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "type": "git",
     "url": "https://github.com/mywebstuff/szeged-pizza-scraper"
   },
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "app/app.js",
   "license": "MIT",
   "scripts": {
+    "start": "node app/app.js",
     "add-new-pizza-place": "node app/bin/add-new-pizza-place.js",
     "scrape-pizza-places": "node app/bin/scrape-pizza-places.js"
   },
