--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "inquirer": "^6.0.0",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "xml-js": "^1.6.7"
   }
 }
