--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@moebius/http-graceful-shutdown": "^1.1.0",
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
+    "config": "^2.0.0",
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "inquirer": "^6.0.0",
