Trying to get nodemon run the graceful shutdown

--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "main": "app/app.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app/app.js",
+    "start": "nodemon app/app.js",
     "add-new-pizza-place": "node app/bin/add-new-pizza-place.js",
     "scrape-pizza-places": "node app/bin/scrape-pizza-places.js"
+  },
+  "nodemonConfig": {
+    "watch": ["app"],
+    "signal": "SIGTERM",
+    "delay": "1000"
   },
   "dependencies": {
     "@moebius/http-graceful-shutdown": "^1.1.0",
@@ -22,5 +27,8 @@
     "inquirer": "^6.0.0",
     "mongoose": "^5.2.4",
     "xml-js": "^1.6.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
